--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "react-router-dom": "^6.15.0",
     "redux": "^4.2.1",
     "sass": "^1.66.1",
+    "shortid": "^2.2.16",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.26",
+    "@types/shortid": "^0.0.29",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
